--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,28 @@
 # 스프링 부트 톰캣 서버 포트 : 8080(기본값) -> 9090
 server.port=9090
+
+# JPA 데이터 소스 연결 : 마리아 DB
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jpa_ex
+spring.datasource.username=jpa_user
+spring.datasource.password=1234qwer!
+
+# JPA 테이블 생성과 관련된 설정
+# 스키마 생성
+spring.jpa.hibernate.ddl-auto=update
+# create : 기존 테이블 삭제 후 다시 생성
+# create-drop : create와 같으나 서버 종료시점에 테이블 drop
+# update : 변경부분만 반영(★)
+# validate : 엔티티와 테이블이 정사적으로 맵핑되었는지 확인
+# none : jpa사용안함
+
+# DDL 생성시 DB 고유의 기능 생성 여부
+spring.jpa.generate-ddl=false
+# 실행되는 SQL문 표시 여부
+spring.jpa.show-sql=true
+# 사용하는 DB mysql = mariadb
+spring.jpa.database=mysql
+# 로그레벨
+logging.level.org.hibernate=info
+# MYSQL 상세 지정
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
