--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 # create : 기존 테이블 삭제 후 다시 생성
 # create-drop : create와 같으나 서버 종료시점에 테이블 drop
 # update : 변경부분만 반영(★)
-# validate : 엔티티와 테이블이 정사적으로 맵핑되었는지 확인
+# validate : 엔티티와 테이블이 정상적으로 맵핑되었는지 확인
 # none : jpa사용안함
 
 # DDL 생성시 DB 고유의 기능 생성 여부
